--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+@font-face {
+  font-family: Montserrat;
+  src: url("../public/assets/fonts/montserrat-alternates/MontserratAlternates-Medium.ttf");
+}
+
+@theme {
+  --font-montserrat: "Montserrat", "sans-serif";
+}
+
+
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, night;
+}
+
+
+/* Fade in */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+
